--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <p>Tässäpä pieni muutos</p>
 
     <!-- Hyödyllisiä kirjastoja -->
     <script src="bower_components/angular/angular.min.js"></script>
