--- a/web/index.html
+++ b/web/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Elokuvakirjasto</title>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <p>Tässäpä pieni muutos</p>
+  <body ng-app="Elokuvakirjasto">
+    <h1>Elokuvakirjasto</h1>
+    <div ng-view></div>
 
     <!-- Hyödyllisiä kirjastoja -->
     <script src="bower_components/angular/angular.min.js"></script>
@@ -18,5 +18,8 @@
 
     <!-- Linkitä omat tiedostosi tähän (huomaa, että polun juuri on web-kansio!) -->
     <script src="app/app.js"></script>    
+    <script src="app/services/firebase_service.js"></script>  
+    <script src="app/controllers/add_movie_controller.js"></script>  
+    <script src="app/controllers/list_movies_controller.js"></script>  
   </body>
 </html>
