--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,10 @@
   </head>
   <body ng-app="Elokuvakirjasto">
     <h1>Elokuvakirjasto</h1>
+    <div id="nav">
+        <a ng-href="#/">list movies</a> 
+        <a ng-href="#/movies/new">add new</a>
+    </div>
     <div ng-view></div>
 
     <!-- Hyödyllisiä kirjastoja -->
