--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,8 @@
     <script src="app/app.js"></script>    
     <script src="app/services/firebase_service.js"></script>  
     <script src="app/controllers/add_movie_controller.js"></script>  
+    <script src="app/controllers/show_movie_controller.js"></script>  
+    <script src="app/controllers/edit_movie_controller.js"></script>  
     <script src="app/controllers/list_movies_controller.js"></script>  
   </body>
 </html>
