--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,7 @@
     <!-- Linkitä omat tiedostosi tähän (huomaa, että polun juuri on web-kansio!) -->
     <script src="app/app.js"></script>    
     <script src="app/services/firebase_service.js"></script>  
+    <script src="app/services/APIService.js"></script>  
     <script src="app/controllers/add_movie_controller.js"></script>  
     <script src="app/controllers/show_movie_controller.js"></script>  
     <script src="app/controllers/edit_movie_controller.js"></script>  
